<resources>
    <string name="app_name">Titibikes</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Registrar</string>
    <string name="edit_login_email">E-mail</string>
    <string name="edit_login_password">Senha</string>
    <string name="btn_login_enter">Entrar</string>
    <string name="btn_login_register">Salvar</string>
    <string name="text_error_register">Erro ao registrar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="facebook_app_id">Facebook</string>
    <string name="facebook_login_button_text">Facebook</string>

</resources>