<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".register.ui.RegisterActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/txt_register"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/color_grey_darker"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Insira um e-mail:"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/color_grey_darker"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="@color/text_input_layout_color"
            app:hintTextColor="@color/color_light_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_login_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textColorHint="@color/color_grey_darker" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Insira uma senha:"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_container_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/color_grey_darker"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="@color/text_input_layout_color"
            app:hintTextColor="@color/color_light_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_login_password"
                android:inputType="textPassword"
                android:lines="1"
                android:textColorHint="@color/color_grey_darker" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title_repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Insira a senha novamente:"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_container_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_container_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/color_grey_darker"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="@color/text_input_layout_color"
            app:hintTextColor="@color/color_light_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_repeat_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password_edit_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_login_password"
                android:inputType="textPassword"
                android:lines="1"
                android:textColorHint="@color/color_grey_darker" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/color_light_orange"
            android:drawableEnd="@drawable/motociclista"
            android:padding="16dp"
            android:text="@string/btn_login_register"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeat_password_container_register" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:indeterminateTint="@color/color_light_orange"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>